--- a/src/scss/new.scss
+++ b/src/scss/new.scss
@@ -22,13 +22,13 @@
 
 .leftChat__senderName___time {
   .leftChat__senderName {
-    width: calc(100% - 56px);
+    width: calc(100% - 58px);
     font-size: 17px;
     color: #000;
   }
 
   .leftChat__time {
-    width: 50px;
+    width: 52px;
     margin-left: 6px;
     font-size: 12px;
     color: #333333;
